--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@financial-times/n-logger": "^5.5.7",
     "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.5.0"
   },
