--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "neo4j": "^2.0.0-RC2",
-    "neo4j-driver": "^1.5.0"
+    "neo4j-driver": "^1.5.0",
+    "nodemon": "^1.12.1"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
   }
 }
