--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,17 @@
 machine:
   node:
     version: 7.10.0
+  java:
+    version: oraclejdk8
+  environment:
+    NEO4J_VERSION: "3.1.1"
+  post:
+    - wget dist.neo4j.org/neo4j-community-$NEO4J_VERSION-unix.tar.gz
+    - tar -xzf neo4j-community-$NEO4J_VERSION-unix.tar.gz
+    - sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j-community-$NEO4J_VERSION/conf/neo4j.conf
+    - neo4j-community-$NEO4J_VERSION/bin/neo4j start
+    - sleep 15
+    - node scripts/init.js
 deployment:
   production:
     branch: master
