--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,7 @@ machine:
     - tar -xzf neo4j-community-$NEO4J_VERSION-unix.tar.gz
     - sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j-community-$NEO4J_VERSION/conf/neo4j.conf
     - neo4j-community-$NEO4J_VERSION/bin/neo4j start
+    - sleep 15
     - node gdpr-biz-op-api/scripts/init.js
 deployment:
   production:
