--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   "homepage": "https://github.com/Financial-Times/gdpr-biz-op-api#readme",
   "dev-dependencies": {
     "@financial-times/secret-squirrel": "^2.5.16",
-    "save": "^2.3.1"
+    "save": "^2.3.1",
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "istanbul": "^1.0.0-alpha.2",
+    "mocha": "^4.0.1"
   },
   "dependencies": {
     "@financial-times/n-logger": "^5.5.7",
@@ -29,12 +34,5 @@
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.5.0",
     "nodemon": "^1.12.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "istanbul": "^1.0.0-alpha.2",
-    "mocha": "^4.0.1"
   }
 }
