--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,8 @@ machine:
     version: 7.10.0
   environment:
     NEO4J_VERSION: "3.1.1"
+  services:
+    - neo4j
 deployment:
   production:
     branch: master
