--- a/circle.yml
+++ b/circle.yml
@@ -1,22 +1,20 @@
 machine:
   node:
     version: 7.10.0
-  # java:
-  #   version: oraclejdk8
-  # environment:
-  #   NEO4J_VERSION: "3.1.1"
-  services:
-    - neo4j
+  java:
+    version: oraclejdk8
+  environment:
+    NEO4J_VERSION: "3.1.1"
 deployment:
   production:
     branch: master
 database:
   override:
-    # - wget dist.neo4j.org/neo4j-community-$NEO4J_VERSION-unix.tar.gz
-    # - tar -xzf neo4j-community-$NEO4J_VERSION-unix.tar.gz
-    # - sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j-community-$NEO4J_VERSION/conf/neo4j.conf
-    # - neo4j-community-$NEO4J_VERSION/bin/neo4j start
-    # - sleep 5
+    - wget dist.neo4j.org/neo4j-community-$NEO4J_VERSION-unix.tar.gz
+    - tar -xzf neo4j-community-$NEO4J_VERSION-unix.tar.gz
+    - sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j-community-$NEO4J_VERSION/conf/neo4j.conf
+    - neo4j-community-$NEO4J_VERSION/bin/neo4j start
+    - sleep 5
     - node scripts/init.js
 test:
   post:
