--- a/package.json
+++ b/package.json
@@ -18,15 +18,6 @@
     "url": "https://github.com/Financial-Times/gdpr-biz-op-api/issues"
   },
   "homepage": "https://github.com/Financial-Times/gdpr-biz-op-api#readme",
-  "dev-dependencies": {
-    "@financial-times/secret-squirrel": "^2.5.16",
-    "save": "^2.3.1",
-    "babel-core": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "istanbul": "^1.0.0-alpha.2",
-    "mocha": "^4.0.1"
-  },
   "dependencies": {
     "@financial-times/n-logger": "^5.5.7",
     "body-parser": "^1.18.2",
@@ -34,5 +25,18 @@
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.5.0",
     "nodemon": "^1.12.1"
+  },
+  "devDependencies": {
+    "@financial-times/secret-squirrel": "^2.5.16",
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "istanbul": "^1.0.0-alpha.2",
+    "mocha": "^4.0.1",
+    "save": "^2.3.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0"
   }
 }
