--- a/package.json
+++ b/package.json
@@ -24,19 +24,21 @@
     "express": "^4.16.2",
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.5.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "supertest": "^3.0.0"
   },
   "devDependencies": {
     "@financial-times/secret-squirrel": "^2.5.16",
     "babel-core": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "istanbul": "^1.0.0-alpha.2",
-    "mocha": "^4.0.1",
-    "save": "^2.3.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "istanbul": "^1.0.0-alpha.2",
+    "lodash": "^4.17.4",
+    "mocha": "^4.0.1",
+    "save": "^2.3.1"
   }
 }
