--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/app.js",
   "scripts": {
     "start": "export $(cat .env | xargs) && nodemon server/app.js",
-    "test": "istanbul cover -i \"+(server|scripts)/**/*.js\" -x \"+(server|scripts)/**/*.spec.js\" --report html --include-all-sources node_modules/.bin/_mocha -- --require test-config \"+(server|scripts|tests)/**/*.spec.js\" --recursive"
+    "test": "istanbul cover -i \"+(server|scripts)/**/*.js\" -x \"+(server|scripts)/**/*.spec.js\" --report html --include-all-sources node_modules/.bin/_mocha -- --require test-config \"+(server|scripts|tests)/**/*.spec.js\" --recursive",
+    "test-dev": "mocha test/**/*.spec.js"
   },
   "repository": {
     "type": "git",
