--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
     "test-dev": "mocha -r dotenv/config tests/**/*.spec.js",
     "init-db": "node -r dotenv/config scripts/init.js",
     "vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
-    "vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, '')' \"$(npm --silent run vault:read)\" > .env"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Financial-Times/gdpr-biz-op-api.git"
+    "vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env"
   },
   "author": "",
   "license": "ISC",
