--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gdpr-biz-op-api",
+  "short": "biz-op-api",
   "team": "internal-products",
   "version": "1.0.0",
   "description": "",
@@ -14,6 +15,7 @@
     "test": "istanbul cover -i \"+(server|scripts)/**/*.js\" -x \"+(server|scripts)/**/*.spec.js\" --report html --include-all-sources node_modules/.bin/_mocha -- --require test-config \"+(server|scripts|tests)/**/*.spec.js\" --recursive --exit",
     "test-dev": "mocha -r dotenv/config tests/**/*.spec.js",
     "init-db": "node -r dotenv/config scripts/init.js",
+    "docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
     "vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
     "vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env"
   },
