--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "export $(cat .env | xargs) && nodemon server/app.js",
     "test": "istanbul cover -i \"+(server|scripts)/**/*.js\" -x \"+(server|scripts)/**/*.spec.js\" --report html --include-all-sources node_modules/.bin/_mocha -- --require test-config \"+(server|scripts|tests)/**/*.spec.js\" --recursive",
-    "test-dev": "export $(cat .env | xargs) && mocha tests/**/*.spec.js",
+    "test-dev": "export $(cat .env | xargs) && mocha tests/**/_crud.spec.js",
     "init-db": "export $(cat .env | xargs) && node scripts/init.js",
     "vault:env": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development | jq -r \".data|to_entries|map(\\\"\\(.key)=\\(.value|tostring)\\\")|.[]\" > .env"
   },
