--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "supertest": "^3.0.0"
   },
   "devDependencies": {
-    "@financial-times/secret-squirrel": "^2.5.16",
+    "@financial-times/secret-squirrel": "^2.7.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -41,6 +41,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "chai": "^4.1.2",
+    "husky": "^0.14.3",
     "istanbul": "^1.0.0-alpha.2",
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
