--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "istanbul": "^1.0.0-alpha.2",
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
+    "proxyquire": "^1.8.0",
     "save": "^2.3.1",
     "sinon": "^4.1.6"
   }
