--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.5.0",
     "nodemon": "^1.12.1",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "webpack": "^2.7.0"
   },
   "devDependencies": {
     "@financial-times/secret-squirrel": "^2.7.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
@@ -48,6 +50,7 @@
     "babel-preset-env": "^1.6.0",
     "chai": "^4.1.2",
     "dotenv": "^4.0.0",
+    "eslint": "^3.19.0",
     "husky": "^0.14.3",
     "istanbul": "^1.0.0-alpha.2",
     "lodash": "^4.17.4",
