--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mocha": "^4.0.1",
     "proxyquire": "^1.8.0",
     "save": "^2.3.1",
-    "sinon": "^4.1.6"
+    "sinon": "^4.1.6",
+    "sinon-chai": "^2.14.0"
   }
 }
