make sure test run in the correct NODE_ENV

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start": "nodemon -r dotenv/config server/app.js",
     "debug": "nodemon -r dotenv/config --inspect=0.0.0.0:9229 server/app.js",
     "test": "istanbul cover -i \"+(server|scripts)/**/*.js\" -x \"+(server|scripts)/**/*.spec.js\" --report html --include-all-sources node_modules/.bin/_mocha -- --require test-config \"+(server|scripts|tests)/**/*.spec.js\" --recursive --exit",
-    "test-dev": "mocha -r test-config  -r dotenv/config tests/**/*.spec.js",
-    "test:debug": "mocha --inspect-brk=0.0.0.0:9088 -r test-config  -r dotenv/config tests/**/*.spec.js",
+    "test-dev": "NODE_ENV=test mocha -r test-config  -r dotenv/config tests/**/*.spec.js",
+    "test:debug": "NODE_ENV=test mocha --inspect-brk=0.0.0.0:9088 -r test-config  -r dotenv/config tests/**/*.spec.js",
     "init-db": "node -r dotenv/config scripts/init.js",
     "docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
     "vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
