--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@financial-times/n-logger": "^5.5.7",
     "aws-sdk": "^2.206.0",
     "body-parser": "^1.18.2",
+    "connect-timeout": "^1.9.0",
     "express": "^4.16.2",
     "isomorphic-fetch": "^2.2.1",
     "neo4j": "^2.0.0-RC2",
