--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+.vscode
 .editorconfig
 *.env*
 .eslintrc.js
@@ -7,6 +8,8 @@ package-lock.json
 
 /bower_components/
 /node_modules/
+yarn-error.log
 /coverage
 
-neo4j
+# local neo4j docker volume mounts
+/neo4j
