--- a/package.json
+++ b/package.json
@@ -28,15 +28,23 @@
     "url": "https://github.com/Financial-Times/biz-ops-api/issues"
   },
   "homepage": "https://github.com/Financial-Times/biz-ops-api#readme",
+  "nodemonConfig": {
+    "ext": "js,graphql"
+  },
   "dependencies": {
     "@financial-times/n-logger": "^5.5.7",
+    "@financial-times/s3o-middleware": "^2.0.6",
+    "apollo-server-express": "^1.3.6",
     "aws-sdk": "^2.206.0",
     "body-parser": "^1.18.2",
     "connect-timeout": "^1.9.0",
     "express": "^4.16.2",
+    "graphql-server-express": "^1.3.6",
+    "graphql-tools": "^3.0.1",
     "isomorphic-fetch": "^2.2.1",
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.5.0",
+    "neo4j-graphql-js": "^0.1.17",
     "nodemon": "^1.12.1",
     "supertest": "^3.0.0",
     "webpack": "^2.7.0"
