--- a/circle.yml
+++ b/circle.yml
@@ -1,21 +1,24 @@
 machine:
   node:
-    version: 7.10.0
+    version: 8.11.1
   java:
     version: oraclejdk8
   environment:
-    NEO4J_VERSION: "3.1.1"
+    NEO4J_VERSION: "3.2.9"
 deployment:
   production:
     branch: master
 database:
   override:
-    - wget dist.neo4j.org/neo4j-community-$NEO4J_VERSION-unix.tar.gz
-    - tar -xzf neo4j-community-$NEO4J_VERSION-unix.tar.gz
-    - sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j-community-$NEO4J_VERSION/conf/neo4j.conf
-    - neo4j-community-$NEO4J_VERSION/bin/neo4j start
-    - sleep 10
+    - mkdir -p neo4j
+    - wget -q dist.neo4j.org/neo4j-community-$NEO4J_VERSION-unix.tar.gz
+    - tar -xzf neo4j-community-$NEO4J_VERSION-unix.tar.gz -C neo4j --strip-components 1
+    - sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j/conf/neo4j.conf
+    - ./scripts/neo4j-plugins
+    - neo4j/bin/neo4j start
+    - ./scripts/neo4j-wait-for-start
     - node scripts/init.js
+
 test:
   post:
     - mv coverage $CIRCLE_ARTIFACTS
