Add graphQL query tests
These tests currently test systems, with data autogenerated from the graphQL schema.

There are a few issues here:
* The complicated setup. To setup, we need to fetch the schema, get the fields for the type we wish to test, and then create stubs from a combination
of the schema and the types. We then need to map enums to the correct names, and
store these results in the database.
* The fact that relationships aren't tested. These are actual cypher queries in the graphQL schema so should realistically be the main thing tested.
* That if you have other data in your local DB your tests will now fail. I'm unsure how to get around this, outside of labelling all test nodes, forcing tests to run on a fresh DB (docker) or dropping the DB prior to running tests

 🐿 v2.8.0

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "nodemon -r dotenv/config server/app.js",
     "debug": "nodemon -r dotenv/config --inspect=0.0.0.0:9229 server/app.js",
     "test": "istanbul cover -i \"+(server|scripts)/**/*.js\" -x \"+(server|scripts)/**/*.spec.js\" --report html --include-all-sources node_modules/.bin/_mocha -- --require test-config \"+(server|scripts|tests)/**/*.spec.js\" --recursive --exit",
-    "test-dev": "NODE_ENV=test mocha -r test-config  -r dotenv/config tests/**/*.spec.js",
+    "test-dev": "NODE_ENV=test mocha -r test-config  -r dotenv/config tests/**/*.spec.js --exit",
     "test:debug": "NODE_ENV=test mocha --inspect-brk=0.0.0.0:9088 -r test-config  -r dotenv/config tests/**/*.spec.js",
     "init-db": "node -r dotenv/config scripts/init.js",
     "docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
@@ -59,6 +59,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "casual": "^1.5.19",
     "chai": "^4.1.2",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
