--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gdpr-biz-ops-api",
+  "name": "biz-ops-api",
   "short": "biz-ops-api",
   "team": "internal-products",
   "version": "1.0.0",
@@ -7,7 +7,7 @@
   "main": "server/app.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Financial-Times/gdpr-biz-ops-api.git"
+    "url": "git+https://github.com/Financial-Times/biz-ops-api.git"
   },
   "scripts": {
     "start": "nodemon -r dotenv/config server/app.js",
@@ -25,9 +25,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Financial-Times/gdpr-biz-ops-api/issues"
+    "url": "https://github.com/Financial-Times/biz-ops-api/issues"
   },
-  "homepage": "https://github.com/Financial-Times/gdpr-biz-ops-api#readme",
+  "homepage": "https://github.com/Financial-Times/biz-ops-api#readme",
   "dependencies": {
     "@financial-times/n-logger": "^5.5.7",
     "aws-sdk": "^2.206.0",
