--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "nodemon -r dotenv/config server/app.js",
     "debug": "npm start -- --inspect=0.0.0.0:9229",
     "test": "istanbul cover -i \"+(server|scripts)/**/*.js\" -x \"+(server|scripts)/**/*.spec.js\" --report html --include-all-sources node_modules/.bin/_mocha -- --require test-config \"+(server|scripts|tests)/**/*.spec.js\" --recursive --exit",
-    "test-dev": "NODE_ENV=test mocha -r test-config  -r dotenv/config tests/**/*.spec.js  --exit",
+    "test-dev": "NODE_ENV=test mocha -r test-config  -r dotenv/config 'tests/**/*.spec.js' --exit",
     "test:debug": "npm run test-dev --  --inspect-brk=0.0.0.0:9088",
     "init-db": "node -r dotenv/config scripts/init.js",
     "docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
