--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "common-tags": "^1.7.2",
     "connect-timeout": "^1.9.0",
     "express": "^4.16.2",
+    "express-async-errors": "^2.1.2",
     "graphql-server-express": "^1.3.6",
     "graphql-tools": "^3.0.1",
     "isomorphic-fetch": "^2.2.1",
