Switch back to explicit memory settings
THe experimental docker memory settings are not available in OpenJDK until java 10

https://bugs.openjdk.java.net/browse/JDK-8146115
 🐿 v2.8.0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
             tar -xzf neo4j-enterprise-$NEO4J_VERSION-unix.tar.gz -C neo4j --strip-components 1
             sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j/conf/neo4j.conf
             ./scripts/neo4j-plugins
-            dbms_jvm_additional="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XshowSettings:vm" neo4j/bin/neo4j start
+            dbms_memory_heap_initial_size="1024m" dbms_memory_heap_max_size="1024m" neo4j/bin/neo4j start
             ./scripts/neo4j-wait-for-start
             node scripts/init.js
 
