--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ database:
     - tar -xzf neo4j-enterprise-$NEO4J_VERSION-unix.tar.gz -C neo4j --strip-components 1
     - sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j/conf/neo4j.conf
     - ./scripts/neo4j-plugins
-    - neo4j/bin/neo4j start
+    - dbms_jvm_additional="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap" neo4j/bin/neo4j start
     - ./scripts/neo4j-wait-for-start
     - node scripts/init.js
 
