--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,14 +60,17 @@ jobs:
           command: |
             java -version
             mkdir -p neo4j
-            wget -q dist.neo4j.org/neo4j-community-$NEO4J_VERSION-unix.tar.gz
-            tar -xzf neo4j-community-$NEO4J_VERSION-unix.tar.gz -C neo4j --strip-components 1
+            wget -q dist.neo4j.org/neo4j-enterprise-$NEO4J_VERSION-unix.tar.gz
+            tar -xzf neo4j-enterprise-$NEO4J_VERSION-unix.tar.gz -C neo4j --strip-components 1
             sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j/conf/neo4j.conf
             ./scripts/neo4j-plugins
             dbms_memory_heap_initial_size="1024m" dbms_memory_heap_max_size="1024m" neo4j/bin/neo4j start
             ./scripts/neo4j-wait-for-start
             node scripts/init.js
 
+      - run:
+          name: Lint
+          command: npm run lint-ci
       - run:
           name: Run tests
           command: npm test
