--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
 version: '3'
 services:
   neo4j:
-    image: neo4j:3.2.9
+    image: neo4j:3.2.9-enterprise
     environment:
       - NEO4J_dbms_logs_query_enabled=true
       - NEO4J_AUTH=none
+      - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
     ports:
       - "7474:7474"
       - "7473:7473"
