--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,9 +69,6 @@ jobs:
             node scripts/init.js
 
       - run:
-          name: Lint
-          command: npm run lint-ci
-      - run:
           name: Run tests
           command: npm test
 
@@ -79,12 +76,24 @@ jobs:
           path: coverage
           destination: /coverage
 
+  lint:
+    <<: *default_container_config
+    steps:
+      - *attach_workspace
+
+      - run:
+          name: Lint
+          command: npm run lint-ci
+
 workflows:
   version: 2
   build-and-deploy:
     jobs:
       - install
       - test:
+          requires:
+            - install
+      - lint:
           requires:
             - install
 
