--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,9 @@ jobs:
             node scripts/init.js
 
       - run:
+          name: Lint
+          command: npm run lint-ci
+      - run:
           name: Run tests
           command: npm test
 
