--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
 		"lint-ci": "eslint --ignore-pattern /coverage/ .",
 		"start": "nodemon -r dotenv/config server/app.js",
 		"debug": "npm start -- --inspect=0.0.0.0:9229",
+		"test:debug": "npm run test-dev --  --inspect-brk",
 		"test": "nyc mocha -- \"+(server|scripts|test)/**/*.spec.js\"",
 		"test-dev": "NODE_ENV=test mocha --require dotenv/config 'test/**/*.spec.js'",
-		"test:debug": "npm run test-dev --  --inspect-brk=0.0.0.0:9088",
 		"init-db": "node -r dotenv/config scripts/init.js",
 		"docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
 		"vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
@@ -64,6 +64,7 @@
 		"express-async-errors": "^2.1.2",
 		"graphql-server-express": "^1.3.6",
 		"graphql-tools": "^3.0.1",
+		"http-errors": "^1.6.3",
 		"isomorphic-fetch": "^2.2.1",
 		"neo4j-driver": "^1.6.1",
 		"neo4j-graphql-js": "^0.1.18",
