--- a/package.json
+++ b/package.json
@@ -62,12 +62,13 @@
 		"connect-timeout": "^1.9.0",
 		"express": "^4.16.3",
 		"express-async-errors": "^2.1.2",
+		"graphql": "^0.13.2",
 		"graphql-server-express": "^1.3.6",
 		"graphql-tools": "^3.0.1",
 		"http-errors": "^1.6.3",
 		"isomorphic-fetch": "^2.2.1",
 		"neo4j-driver": "^1.6.1",
-		"neo4j-graphql-js": "^0.1.18",
+		"neo4j-graphql-js": "0.1.17",
 		"nodemon": "^1.17.4"
 	},
 	"devDependencies": {
