new session for each db action (#157)
* new session for each db action
 🐿 v2.9.0

* Create a new DB session for each constraint operation

These are ran in parallel with Promise.all

The neo4j bolt driver does not support parallel queries on a single DB session. The behaviour is to return the first result and not send the query to the DB.

This is likely to be a problem in the rest of the application
as we use a single DB driver session and queries are likely to be concurrent
if executed with any volume of traffic
 🐿 v2.8.0

* Run constraints in series

* Fix constraints check query
 🐿 v2.8.0

* Sessions for everything

* Update package lock
 🐿 v2.8.0

* Add eslint ignore

Was getting weird eslint/prettier behaviour and I'm not 100% sure why
 🐿 v2.8.0

* Lock linter and prettier versions to patch so npm update on CI doesn't result in discrepencies
 🐿 v2.9.0

* close sessions, and add ability for limited sharing of session
 🐿 v2.9.0

* lint
 🐿 v2.9.0

* rename dbDown
 🐿 v2.9.0

* relint
 🐿 v2.9.0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
           name: Install dependencies
           command: |
             npm install --no-save
-            npm update
+            npm update --no-save
 
       - *cache_node_modules
 
