Update constraints on startup (#159)
* init db constraints on app startup
 🐿 v2.9.0

* constraint setup runs every time app starts
 🐿 v2.9.0

* updated security for graphql
 🐿 v2.9.0

* tweak until all tests pass again
 🐿 v2.9.0

* reorg and tidy up of names
 🐿 v2.9.0

* tests for updating constraints
 🐿 v2.9.0

* final few tidies
 🐿 v2.9.0

* point test db init at correct script

 🐿 v2.9.0

* tweaked mocha options
 🐿 v2.9.0

* temp rename of graphQl to force case change
 🐿 v2.9.0

* rename graphql1 to graphql
 🐿 v2.9.0

* add logging to graphql
 🐿 v2.9.0

* simplification of constraint creation
 🐿 v2.9.0

* address feedback
 🐿 v2.9.0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
             ./scripts/neo4j-plugins
             dbms_memory_heap_initial_size="1024m" dbms_memory_heap_max_size="1024m" neo4j/bin/neo4j start
             ./scripts/neo4j-wait-for-start
-            node scripts/init.js
+            node schema/init-db.js
       - run:
           name: Run tests
           command: npm test
