--- a/schema/types/Group.yaml
+++ b/schema/types/Group.yaml
@@ -12,7 +12,7 @@ properties:
     type: String
     canIdentify: true
     description: The name of the group
-  status:
-    type: Status
+  isActive:
+    type: Boolean
     canFilter: true
     description: Whether or not the group is still in existence
