--- a/schema/types/Supplier.yaml
+++ b/schema/types/Supplier.yaml
@@ -24,7 +24,7 @@ properties:
     type: String
     canIdentify: true
     description: The supplier's phone contact number
-  status:
-    type: Status
+  isActive:
+    type: Boolean
     canFilter: true
     description: Whether or not the supplier is still in existence
