Add YesNoUnknown to enums  🐿 v2.8.0

--- a/schema/rules/enums.yaml
+++ b/schema/rules/enums.yaml
@@ -9,6 +9,12 @@ YesNo:
   options:
     - Yes
     - No
+YesNoUnknown:
+    description: For questions where the answer is yes, no or unknown
+    options:
+    - Yes
+    - No
+    - Unknown
 SystemLifecycle:
   description: The lifecycle stage of a system
   options:
