Update repository schema vcsID
Update vcsID.
This is a base64 encodedstring, not an int
e.g MDEwOlJlcG9zaXRvcnk4MDIwMTc0MA==

--- a/schema/types/Repository.yaml
+++ b/schema/types/Repository.yaml
@@ -18,7 +18,7 @@ properties:
     canIdentify: true
     description: Repository URL
   vcsID:
-    type: Int
+    type: String
     description: Repository hosts internal ID
   sshUrl:
     type: String
