Add 'Unsupported' to service tier
This is missing, but exists in the data, resulting in GraphQL errors

--- a/schema/rules/enums.yaml
+++ b/schema/rules/enums.yaml
@@ -25,6 +25,7 @@ SystemLifecycle:
 ServiceTier:
   description: A system's support level
   options:
+	  - Unsupported
     - Bronze
     - Gold
     - Silver
