Change enums to have first letter of each value capitalised  🐿 v2.8.0

--- a/schema/rules/enums.yaml
+++ b/schema/rules/enums.yaml
@@ -7,22 +7,22 @@ CircleCiVersion:
 SystemLifecycle:
   description: The lifecycle stage of a system
   options:
-    - PRODUCTION
-    - REQUIREMENTS
-    - RETIRED
-    - TESTING
-    - ANALYSIS
+    - Production
+    - Requirements
+    - Retired
+    - Testing
+    - Analysis
 ServiceTier:
   description: A system's support level
   options:
-    - BRONZE
-    - GOLD
-    - SILVER
-    - PLATINUM
+    - Bronze
+    - Gold
+    - Silver
+    - Platinum
 ProductLifecycle:
   description: The lifecycle stage of a product
   options:
-    - INCUBATE
-    - SUSTAIN
-    - GROW
-    - SUNSET
+    - Incubate
+    - Sustain
+    - Grow
+    - Sunset
