looser pattern for konstructor code (#169)
* looser pattern for konstructor code

* Update Konstructor.yaml

--- a/schema/types/Konstructor.yaml
+++ b/schema/types/Konstructor.yaml
@@ -7,6 +7,7 @@ properties:
     unique: true
     canIdentify: true
     description: 'Unique code/id for this item'
+    pattern: NO_SPACES
   name:
     type: String
     canIdentify: true
