--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"test:debug": "npm run test-dev --  --inspect-brk",
 		"test": "nyc mocha -- \"+(server|test|schema)/**/*.spec.js\"",
 		"test-dev": "NODE_ENV=test mocha --require dotenv/config 'test/**/*.spec.js'",
-		"init-db": "node -r dotenv/config scripts/init.js",
+		"init-db": "node -r dotenv/config schema/init-db.js",
 		"docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
 		"vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
 		"vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env",
