--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
 		"isomorphic-fetch": "^2.2.1",
 		"js-yaml": "^3.12.0",
 		"neo4j-driver": "^1.6.1",
-		"neo4j-graphql-js": "^0.1.23",
+		"neo4j-graphql-js": "~0.1.23",
 		"nodemon": "^1.17.4"
 	},
 	"devDependencies": {
@@ -81,7 +81,7 @@
 		"eslint": "^4.19.1",
 		"eslint-config-origami-component": "^1.0.0",
 		"eslint-config-prettier": "~2.9.0",
-		"eslint-plugin-prettier": "^2.6.1",
+		"eslint-plugin-prettier": "~2.6.1",
 		"husky": "^0.14.3",
 		"lodash": "^4.17.10",
 		"mocha": "^5.1.1",
