added description field to graphql (#186)
* added description field to graphql
 🐿 v2.9.0

* fix implicit restrictions on code lengths
 🐿 v2.9.0

* Update System.yaml

--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -12,10 +12,14 @@ properties:
     type: String
     canIdentify: true
     description: Display name of the system
+  description:
+    type: String
+    canIdentify: true
+    description: Description of the system
   supported:
     type: Boolean
     canFilter: true
-    description: Whether the system is supported
+    description: Whether the system is supported by operations
   primaryURL:
     type: String
     canIdentify: true
