--- a/schema/types/Team.yaml
+++ b/schema/types/Team.yaml
@@ -28,3 +28,9 @@ properties:
     type: Boolean
     canFilter: true
     description: Whether or not the team is still in existence
+  supportRota:
+    type: String
+    description: Url linking to details of the system's support rota
+  contactPref:
+    type: String
+    description: Preferred contact method
