tidy up of model based on discussion 29/6 (#191)
* tidy up of model based on discussion 29/6
 🐿 v2.9.0

* known_about_by
 🐿 v2.9.0

--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -36,11 +36,11 @@ properties:
     type: String
     canFilter: true
     description: The platform the service is hosted on, e.g. Heroku
-  personalData:
+  containsPersonalData:
     type: Boolean
     canFilter: true
     description: Whether the system contains personal PI2 data
-  sensitiveData:
+  containsSensitiveData:
     type: Boolean
     canFilter: true
     description: Whether the system contains sensitive data
