--- a/schema/rules/relationships.yaml
+++ b/schema/rules/relationships.yaml
@@ -3,12 +3,12 @@ PAYS_FOR:
   fromType:
     CostCentre:
       graphql:
-        name: hasGroups
+        name: groups
         description: The groups which are costed to the cost centre
   toType:
     Group:
       graphql:
-        name: hasBudget
+        name: costCentre
         description: The Cost Centre associated with the group
 
 HAS_TECH_DIRECTOR:
@@ -21,7 +21,7 @@ HAS_TECH_DIRECTOR:
   toType:
     Person:
       graphql:
-        name: isTechDirectorFor
+        name: techDirectorFor
         description: Groups the person is a technical director for
 
 HAS_TECH_LEAD:
@@ -29,26 +29,50 @@ HAS_TECH_LEAD:
   fromType:
     Team:
       graphql:
-        name: techLead
+        name: techLeads
         description: The tech leads of the team
   toType:
     Person:
       graphql:
-        name: isTechLeadFor
+        name: techLeadFor
         description: Teams the person is a technical lead for
 
 HAS_PRODUCT_OWNER:
-  type: MANY_TO_MANY
-  fromType:
-    Team:
-      graphql:
-        name: productOwner
-        description: The product owner of the team
-  toType:
-    Person:
-      graphql:
-        name: isProductOwnerFor
-        description: Teams the person is a product owner for
+  -
+    type: MANY_TO_MANY
+    fromType:
+      Team:
+        graphql:
+          name: productOwners
+          description: The product owner of the team
+    toType:
+      Person:
+        graphql:
+          name: ownedTeams
+          description: Teams the person is a product owner for
+  - type: MANY_TO_MANY
+    fromType:
+      Product:
+        graphql:
+          name: productOwners
+          description: The product's owner
+    toType:
+      Person:
+        graphql:
+          name: ownedProducts
+          description: Products the person is a product owner for
+  - type: MANY_TO_MANY
+    fromType:
+      System:
+        graphql:
+          name: productOwners
+          description: The system's product owner
+    toType:
+      Person:
+        graphql:
+          name: ownedSystems
+          description: Systems the person is a product owner for
+
 
 HAS_TEAM:
   -
@@ -106,31 +130,19 @@ MONITORED_BY:
         description: The systems which the healthcheck monitors
 
 
-OWNED_BY:
+DELIVERED_BY:
   -
     type: MANY_TO_ONE
     fromType:
       System:
         graphql:
-          name: ownedBy
+          name: deliveredBy
           description: The team which owns the system
     toType:
       Team:
         graphql:
-          name: owns
+          name: delivers
           description: The systems the team owns
-  -
-    type: MANY_TO_ONE
-    fromType:
-      Product:
-        graphql:
-          name: ownedBy
-          description: The person who owns the product
-    toType:
-      Person:
-        graphql:
-          name: owns
-          description: The products the person owns
 
 SUPPORTED_BY:
   -
@@ -158,18 +170,18 @@ SUPPORTED_BY:
           name: supports
           description: The systems the supplier supports
 
-KNOWN_BY:
+KNOWN_ABOUT_BY:
   type: MANY_TO_MANY
   fromType:
     System:
       graphql:
-        name: isKnownBy
-        description: Individuals who have operational knowledge of the system
+        name: knownAboutBy
+        description: People who know about the system
   toType:
     Person:
       graphql:
-        name: knows
-        description: Systems the person has knowledge of
+        name: knowsAbout
+        description: Systems the person knows about
 
 DEPENDS_ON:
   -
